--- a/screens/contactos.html
+++ b/screens/contactos.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="../assets/css/style.css">
 </head>
 <body>
+   
     <header></header>
     <nav class="navbar">
         <img class="logo" src="../assets/img/logo.png">
@@ -67,5 +68,6 @@
     </main>
     <aside></aside>
     <footer>Gentile Mara, Todos los derechos reservados...</footer>
+    <script src="./assets/js/main.js"></script>
     </body>
 </html>
